--- a/libs/base/print.less
+++ b/libs/base/print.less
@@ -90,8 +90,8 @@ aside,
 .callout--generous,
 .callout--white {
 	border: 1px solid @gray-5;
-	.spacing(padding,@box-spacing);
-	.spacing(margin,@box-spacing,0);
+	padding: @box-spacing;
+	margin: @box-spacing 0;
 	//page-break-inside: avoid;
 }
 
