Update PIP2 contents form layout

--- a/libs/jade/pip-contents.jade
+++ b/libs/jade/pip-contents.jade
@@ -40,21 +40,25 @@ block section-notice
 block content
     .articleContent
         div
-            p Select from one of the questions below that you need help with. The numbers relate to the question number on your PIP2 form. If you haven't received yours, you can #[a(href="#") request it from DWP].
-            .box--links
-                a.steps__link(href="#")
-                    h2 General Advice
-                    p Advice for completing the additional parts of your PIP2 form and return it.
+            h2 General Advice
+            p Make sure you #[strong answer all the questions], even if you don't think they are relevant to you or your condition. You don't have to complete the form in one go, take regular breaks and come back to it or ask for help from a friend or family member.
 
-            .box--links
-                a.steps__link(href="#")
-                    h2 Q3 Preparing Food
-                    p Detailed information to help answer question 3 about preparing food.
+            h2 Help with specific questions
+            p Select from one of the questions below that you need help with. If you haven't received yours, you can #[a(href="#") request it from DWP].
 
-            .box--links
-                a.steps__link(href="pip-dressing.html")
-                    h2 Q8 Dressing and undressing
-                    p Detailed information to help answer question 8 about dressing and undressing.
+            ul
+                li #[a(href="#") Help with question 2, About your health conditions]
+                li #[a(href="#") Help with question 3, Preparing Food]
+                li #[a(href="#") Help with question 4, Eating and drinking]
+                li #[a(href="#") Help with question 5, Managing treatments]
+                li #[a(href="#") Help with question 6, Washing and bathing]
+                li #[a(href="#") Help with question 7, Managing toilet needs]
+                li #[a(href="#") Help with question 8, Dressing and undressing]
+                li #[a(href="#") Help with question 9, Communicating]
+                li #[a(href="#") Help with question 10, Reading]
+                li #[a(href="#") Help with question 11, Mixing with other people]
+                li #[a(href="#") Help with question 12, Making decisions about money]
+                li #[a(href="#") Help with question 13, Going out]
                 
     #simpleModal.modal
             .extent-country-select
