--- a/libs/jade/pip-cooking.jade
+++ b/libs/jade/pip-cooking.jade
@@ -1,5 +1,5 @@
 block settings
-    - var title = "Question 3: prepare and cook a simple meal"
+    - var title = "Help with question 3, Preparing Food"
     - var sidebar = true
     - var toolbars = true
     //- var cookiemonster = true
@@ -20,21 +20,19 @@ block breadcrumbs
 block sidebar
     - var section = "Help filling in your PIP2 form"
     +sidebar([
-        {title: "General Advice"},
-        //{title: "Q2 About your health conditions or disabilities"},
-        {title: "Q3 Preparing Food"},
-        //{title: "Q4 Eating and drinking"},
-        //{title: "Q5 Managing treatments"},
-        //{title: "Q6 Washing and bathing"},
-        //{title: "Q7 Managing toilet needs"},
-        {title: "Q8 Dressing and undressing"}
-        //{title: "Q9 Communicating"},
-        //{title: "Q10 Reading"},
-        //{title: "Q11 Mixing with other people"},
-        //{title: "Q12 Making decisions about money"},
-        //{title: "Q13 Going out"},
-        //{title: "Q14 Moving around"}
-        ],2)
+            {title: "Help with question 2, About your health conditions"},
+            {title: "Help with question 3, Preparing Food"},
+            {title: "Help with question 4, Eating and drinking"},
+            {title: "Help with question 5, Managing treatments"},
+            {title: "Help with question 6, Washing and bathing"},
+            {title: "Help with question 7, Managing toilet needs"},
+            {title: "Help with question 8, Dressing and undressing"},
+            {title: "Help with question 9, Communicating"},
+            {title: "Help with question 10, Reading"},
+            {title: "Help with question 11, Mixing with other people"},
+            {title: "Help with question 12, Making decisions about money"},
+            {title: "Help with question 13, Going out"},
+            ],1)
 //    - var section = "Sibling categories"
 //    +sidebar([
 //        ])
