--- a/libs/jade/pip-index.jade
+++ b/libs/jade/pip-index.jade
@@ -23,12 +23,10 @@ block section-notice
 
 block content
 	.articleContent
-		.beta-index-page
-
-			.beta-index-page__box.col-md-12.col-sm-12
-				.beta-index-page__section.col-md-6.col-sm-12
+		.row
+			.span8
+				.beta-index-page__box.col-md-12.col-sm-12
 					h2 Before you claim PIP
-				.beta-index-page__links.col-md-6.col-sm-12
 					ul.li--no-style
 						li #[a(href="#") Check if you&#39;re eligible for PIP]
 						li #[a(href="#") PIP: presence, residence and length of condition rules]
@@ -36,10 +34,8 @@ block content
 						li #[a(href="#") Extra money and help PIP entitles you to]
 						li #[a(href="#") Moving from DLA to PIP]
 
-			.beta-index-page__box.col-md-12.col-sm-12 
-				.beta-index-page__section.col-md-6.col-sm-12
+				.beta-index-page__box.col-md-12.col-sm-12 
 					h2 Help with your PIP claim
-				.beta-index-page__links.col-md-6.col-sm-12
 					ul.li--no-style
 						li #[a(href="#") How to claim PIP]
 						li #[a(href="pip-contents.html") Help filling in your PIP2 form]
@@ -49,20 +45,16 @@ block content
 						li #[a(href="#") Preparing for your PIP assessment]
 						li #[a(href="#") Changes that affect your PIP]
 
-			.beta-index-page__box.col-md-12.col-sm-12
-				.beta-index-page__section.col-md-6.col-sm-12
+				.beta-index-page__box.col-md-12.col-sm-12
 					h2 PIP appeals
-				.beta-index-page__links.col-md-6.col-sm-12
-					ul.li--no-style
+					ul.li--no-style(style="clear:both;")
 						li #[a Challenging a PIP decision - mandatory reconsideration]
 						li #[a Challenging a PIP decision - apply for a tribunal hearing]
 						li #[a Challenging a PIP decision - the tribunal hearing]
 						li #[a How the DWP makes a decision on PIP claims]
 
-			.beta-index-page__box.col-md-12.col-sm-12
-				.beta-index-page__section.col-md-6.col-sm-12
-					h2 PIP appeals
-				.beta-index-page__links.col-md-6.col-sm-12
+				.beta-index-page__box.col-md-12.col-sm-12
+					h2 PIP resources
 					ul.li--no-style
 						li #[a PIP resources for advisers]
 						li #[a Letter to confirm the DWP has given you more time to send your PIP claim form]
