Removed .spacing for /modules A-D

--- a/libs/modules/atoz.less
+++ b/libs/modules/atoz.less
@@ -10,14 +10,14 @@
 .atoz-letters {
     width: 100%;
     max-width: 36.4em;
-    .spacing(margin,@box-spacing-horizontal,0,@box-spacing-horizontal,-@box-spacing-horizontal*.2); // Negative margin as all items inside have a .2em padding
+    margin: @box-spacing-horizontal 0 @box-spacing-horizontal -@box-spacing-horizontal*.2; // Negative margin as all items inside have a .2em padding
     padding: 0;
     overflow: hidden;
     list-style: none;
 
     & > li {
         float: left;
-        .spacing(padding,0,@box-spacing-horizontal*.2);
+        padding: 0 @box-spacing-horizontal*.2;
 
         & > a {
             display: inline-block;
@@ -25,7 +25,7 @@
             background-color: @gray-1;
             color: @white;
             width: 2.4em;
-            .spacing(padding,@box-spacing-horizontal*.5);
+            padding: @box-spacing-horizontal*.5;
             &:hover, &:focus {
                 background-color: @heritage-blue;
             }
@@ -49,13 +49,11 @@
 
     & > li > ul {
         list-style: none;
-        .spacing(margin,@box-spacing-horizontal*.3,0,@box-spacing,0);
-        padding-left: unit(@box-spacing-horizontal*2*@base-size,px);
+        margin: @box-spacing-horizontal*.3 0 @box-spacing 0;
         padding-left: @box-spacing-horizontal*2;
     }
 
     & > li > ul > li {
-         margin-bottom: unit(@box-spacing*.3*@base-size,px);
          margin-bottom: @box-spacing*.3;
          font-weight: @font-weight-base;
     }
@@ -67,7 +65,6 @@
 
 // Show gap between the see also links and the main links
 .atoz__entry--see-also + li:not(.atoz__entry--see-also), .atoz__entry--promoted + li:not(.atoz__entry--promoted) {
-    margin-top: unit(@box-spacing-horizontal*.5*@base-size,px);
     margin-top: @box-spacing-horizontal*.5;
 }
 
