--- a/libs/modules/content-index.less
+++ b/libs/modules/content-index.less
@@ -39,7 +39,7 @@
     margin-top: -@box-spacing;
     background-color: @gray-7;
     h1 {
-        .spacing(margin,@box-spacing,0);
+        margin: @box-spacing 0;
     }
 
     @media (max-width: @screen-xs-max) {
