--- a/libs/modules/decision-tree.less
+++ b/libs/modules/decision-tree.less
@@ -2,11 +2,11 @@
  * DECISION TREE
  *
  * Usage unknown.
- * 
+ *
  */
 
 .decision-tree {
-  .spacing(padding,@box-spacing-horizontal*.5);
+  padding: @box-spacing-horizontal*.5;
   border: 1px solid @heritage-blue;
   background: @white;
   margin: box-spacing 0;
@@ -19,5 +19,5 @@
 }
 
 .decision-tree__buttons button {
-  .spacing(margin,0,@box-spacing-horizontal*.3,@box-spacing-horizontal*.5,0);
+  margin: 0 @box-spacing-horizontal*.3 @box-spacing-horizontal*.5 0;
 }
